--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   dartz: ^0.10.1
   hive: ^2.2.3
   equatable: ^2.0.5
-  provider: ^6.0.3  
+  provider: ^6.0.3
+  internet_connection_checker: ^1.0.0+1  
 
 dev_dependencies:
   flutter_test:
