--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ dependencies:
   shared_preferences: ^2.0.15
   get_it: ^7.2.0
   dartz: ^0.10.1
-  hive: ^2.2.3
   equatable: ^2.0.5
   provider: ^6.0.3
+  sqflite: ^2.1.0
   internet_connection_checker: ^1.0.0+1  
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +37,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   retrofit_generator: ^4.0.1
   mobx_codegen: ^2.0.7+3
-  hive_generator: ^1.1.3
+  mockito: ^5.3.2
+  http_mock_adapter: ^0.3.3
 
 flutter:
   uses-material-design: true
